tests/ui/abi/unsupported.x64_win.stderr
error[E0570]: `"ptx-kernel"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:36:8
   |
LL | extern "ptx-kernel" fn ptx() {}
   |        ^^^^^^^^^^^^

error[E0570]: `"ptx-kernel"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:38:22
   |
LL | fn ptx_ptr(f: extern "ptx-kernel" fn()) {
   |                      ^^^^^^^^^^^^

error[E0570]: `"ptx-kernel"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:42:8
   |
LL | extern "ptx-kernel" {}
   |        ^^^^^^^^^^^^

error[E0570]: `"gpu-kernel"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:44:8
   |
LL | extern "gpu-kernel" fn gpu() {}
   |        ^^^^^^^^^^^^

error[E0570]: `"aapcs"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:47:8
   |
LL | extern "aapcs" fn aapcs() {}
   |        ^^^^^^^

error[E0570]: `"aapcs"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:49:24
   |
LL | fn aapcs_ptr(f: extern "aapcs" fn()) {
   |                        ^^^^^^^

error[E0570]: `"aapcs"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:53:8
   |
LL | extern "aapcs" {}
   |        ^^^^^^^

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:56:8
   |
LL | extern "msp430-interrupt" fn msp430() {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:58:25
   |
LL | fn msp430_ptr(f: extern "msp430-interrupt" fn()) {
   |                         ^^^^^^^^^^^^^^^^^^

error[E0570]: `"msp430-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:62:8
   |
LL | extern "msp430-interrupt" {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0570]: `"avr-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:65:8
   |
LL | extern "avr-interrupt" fn avr() {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: `"avr-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:67:22
   |
LL | fn avr_ptr(f: extern "avr-interrupt" fn()) {
   |                      ^^^^^^^^^^^^^^^

error[E0570]: `"avr-interrupt"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:71:8
   |
LL | extern "avr-interrupt" {}
   |        ^^^^^^^^^^^^^^^

error[E0570]: `"riscv-interrupt-m"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:74:8
   |
LL | extern "riscv-interrupt-m" fn riscv() {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: `"riscv-interrupt-m"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:76:24
   |
LL | fn riscv_ptr(f: extern "riscv-interrupt-m" fn()) {
   |                        ^^^^^^^^^^^^^^^^^^^

error[E0570]: `"riscv-interrupt-m"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:80:8
   |
LL | extern "riscv-interrupt-m" {}
   |        ^^^^^^^^^^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:92:8
   |
LL | extern "thiscall" fn thiscall() {}
   |        ^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:94:27
   |
LL | fn thiscall_ptr(f: extern "thiscall" fn()) {
   |                           ^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:98:8
   |
LL | extern "thiscall" {}
   |        ^^^^^^^^^^

error[E0570]: `"C-cmse-nonsecure-call"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:144:28
   |
LL | fn cmse_call_ptr(f: extern "C-cmse-nonsecure-call" fn()) {
   |                            ^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"C-cmse-nonsecure-entry"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:149:8
   |
LL | extern "C-cmse-nonsecure-entry" fn cmse_entry() {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"C-cmse-nonsecure-entry"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:151:29
   |
LL | fn cmse_entry_ptr(f: extern "C-cmse-nonsecure-entry" fn()) {
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"C-cmse-nonsecure-entry"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:155:8
   |
LL | extern "C-cmse-nonsecure-entry" {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:165:17
   |
LL |     ptr: extern "thiscall" fn(),
   |                 ^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:170:16
   |
LL |     pub extern "thiscall" fn inherent_fn(self) {
   |                ^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:177:12
   |
LL |     extern "thiscall" fn trait_fn(self);
   |            ^^^^^^^^^^

error[E0570]: `"thiscall"` is not a supported ABI for the current target
  --> $DIR/unsupported.rs:182:12
   |
LL |     extern "thiscall" fn trait_fn(self) {
   |            ^^^^^^^^^^

warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:105:19
   |
LL | fn stdcall_ptr(f: extern "stdcall" fn()) {
   |                   ^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`
   = note: `#[warn(unsupported_calling_conventions)]` on by default

warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:111:1
   |
LL | extern "stdcall" {}
   | ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

warning: "stdcall-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:115:1
   |
LL | extern "stdcall-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall-unwind"` on win32 and `extern "C-unwind"` everywhere else, use `extern "system-unwind"`

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:123:17
   |
LL | fn cdecl_ptr(f: extern "cdecl" fn()) {
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:128:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

warning: "cdecl-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:131:1
   |
LL | extern "cdecl-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C-unwind"` instead

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:160:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:101:1
   |
LL | extern "stdcall" fn stdcall() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`

warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:120:1
   |
LL | extern "cdecl" fn cdecl() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead

error: aborting due to 27 previous errors; 9 warnings emitted

For more information about this error, try `rustc --explain E0570`.
Future incompatibility report: Future breakage diagnostic:
warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:105:19
   |
LL | fn stdcall_ptr(f: extern "stdcall" fn()) {
   |                   ^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:111:1
   |
LL | extern "stdcall" {}
   | ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "stdcall-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:115:1
   |
LL | extern "stdcall-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall-unwind"` on win32 and `extern "C-unwind"` everywhere else, use `extern "system-unwind"`
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:123:17
   |
LL | fn cdecl_ptr(f: extern "cdecl" fn()) {
   |                 ^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:128:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "cdecl-unwind" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:131:1
   |
LL | extern "cdecl-unwind" {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C-unwind"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:160:1
   |
LL | extern "cdecl" {}
   | ^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "stdcall" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:101:1
   |
LL | extern "stdcall" fn stdcall() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: if you need `extern "stdcall"` on win32 and `extern "C"` everywhere else, use `extern "system"`
   = note: `#[warn(unsupported_calling_conventions)]` on by default

Future breakage diagnostic:
warning: "cdecl" is not a supported ABI for the current target
  --> $DIR/unsupported.rs:120:1
   |
LL | extern "cdecl" fn cdecl() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #137018 <https://github.com/rust-lang/rust/issues/137018>
   = help: use `extern "C"` instead
   = note: `#[warn(unsupported_calling_conventions)]` on by default

